# GameEngine

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt  loadDependencies.cmake
engine/src/core/: application.cpp  application.h  input.h  window.h
engine/src/platform/: factory.cpp  factory.h
engine/src/platform/glfw/: glfwFactory.cpp  glfwFactory.h  glfwInput.cpp  glfwWindow.cpp  glfwWindow.h
engine/src/platform/opengl/: openglFactory.cpp  openglFactory.h  openglRendererAPI.cpp  openglRendererAPI.h
engine/src/rendering/: renderer.cpp  renderer.h  rendererAPI.h  rendererFactory.cpp  rendererFactory.h
